--- a/docs/stylesheets/unibe.css
+++ b/docs/stylesheets/unibe.css
@@ -2,8 +2,8 @@
     background-color: #d6002b;
 }
 
-@media only screen and (max-width:76.1875em) {
-    html .md-nav--primary .md-nav__title--site {
+@media only screen {
+    html .md-nav--primary .md-nav__title[for=__drawer] {
         background-color: #d6002b;
     }
 }
